...
                              color:
                                  slot.disponibile ? Colors.green : Colors.grey,
                              child: ListTile(
                                title: Text(slot.orario),
                                trailing: slot.disponibile
                                    ? ElevatedButton(
                                        key: Key('prenota_button'),
                                        onPressed: () {
                                          _prenotaSlot(slot);
                                        },
                                        child: const Text('Prenota'),
                                      )
                                    : const Text(
...
        _selectedDay, // Salviamo la data come stringa anche per lo slot
        slotAggiornato,
      );

      // Mostra un messaggio di conferma all'utente
      ScaffoldMessenger.of(context).showSnackBar(
        const SnackBar(content: Text('Slot prenotato con successo!')),
      );

      // Aggiorna lo stato locale per riflettere i cambiamenti
      _fetchSlotFirebase();
    } catch (e) {
      // Gestione degli errori
...
